Oppdatert IT-side

--- a/realfag/programfag/informasjonsteknologi/index.html
+++ b/realfag/programfag/informasjonsteknologi/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                I informasjonsteknologi (IT) lærer elevene programmering og  systemutvikling, samt forståelse for hvordan IT påvirker mennesker og samfunnet. Dette styrker elevenes digitale kompetanse og forbereder dem på fremtidige studier og jobber. 
+                I informasjonsteknologi (IT) lærer elevene programmering og  systemutvikling. Vi ser på hvordan IT påvirker mennesker og samfunnet. Dette styrker elevenes digitale kompetanse og forbereder dem på fremtidige studier og jobber. 
             </p>
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
@@ -45,7 +45,7 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>Grunnleggende programmering i flere språk</li>
+                        <li>Grunnleggende programmering for nettsider</li>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -54,7 +54,6 @@
                         <li>Nettsidedesign</li>
                         <ul>
                             <li>Universiell utforming</li>
-                            <li>Brukervennlig design</li>
                             <li>Responsive nettsider</li>
                         </ul>
                         <li>Hvordan internett og datamaskiner fungerer</li>
@@ -68,13 +67,13 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        IT1 
+                        IT1 passer for både nybegynnere og erfarne programmerere. Hovedfokuset er på å lære grunnleggende programmering gjennom å lage nettsider, mens de mer erfarne elevene også kan bruke en god del tid på egne IT-prosjekter.
                     </p>
                     <p>
-                        TODO
+                        IT-fagene er praktiske fag. Man kan ikke lese seg til å bli en god programmerer; man må faktisk programmere, og skaffe seg erfaring. Dermed blir det meste av tiden selvstendig arbeid, og det er lite variasjon i timene: vi sitter med laptopen nesten hele tiden. Med noen samarbeidsprosjekter gjennom året får vi skapt større produkter enn det hver enkelt av oss har kapasitet til alene.
                     </p>
                     <p>
-                        TODO
+                        En god programmerer er tålmodig og utholdende, for det kan fort ta timevis å få et program til å virke slik man vil. Man må også være kreativ, for å stadig lage nye varianter av ting. Det er en fordel å være språklig sterk, for her lærer man flere nye språk på en gang.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
@@ -86,7 +85,7 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            /* No comment */
+                            // No comment
                         </i>
                     </p>
                     <p>
@@ -97,7 +96,7 @@
                     <h3>Aktuelle lenker</h3>
                     <li><a href="https://snl.no/IT" target="_blank">SNL</a></li>
                     <li><a href="https://www.udir.no/lk20/inf01-02/" target="_blank">Læreplan</a></li>
-                    <li><a href="https://it1-julekalenderen.w3spaces.com/" target="_blank">IT1-projekt desember 2024</a></li>
+                    
 
                 </div>
                 <!-- legg til interaktivt element her -->
@@ -127,15 +126,17 @@
                         <li>Programmering og algoritmer</li>
                         <ul>
                             <li>Python</li>
-                            <li>C++</li>
-                            <li>Javascript (om du vil)</li>
+                            <li>Objektorientert programmering</li>
+                            <li>Spillutvikling og animasjoner</li>
+                            <li>Databehandling og reelle datasett</li>
+                            <li>Testing</li>
+                            <li>Brukervennlig design</li>
                         </ul>
-                        <li>Objektorientert programmering</li>
-                        <li>Databehandling og store datasett</li>
-                        <li>Spillutvikling og animasjoner</li>
-                        <li>Systemutvikling og team-arbeid med github</li>
+                        <li>Systemutvikling og team-arbeid med GitHub</li>
+                        <li>Dagsaktuelle temaer om hvordan IT påvirker samfunnet</li>
                         <li>Skaperverksted</li>
                         <ul>
+                            <li>C++</li>
                             <li>3D-Printing, laserkutting</li>
                             <li>Roboter etc laget med Arduino</li>
                         </ul>
@@ -147,18 +148,18 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        TODO
+                        I IT2 bruker vi Python-programmering, som mange elever allerede er kjent med fra andre realfag. Vi vil bl.a. lese datafiler og behandle store datasett, noe som også inngår i enkelte matematikkfag. Men "reelle datasett" betyr her at datafilene er større, mer komplekse, og inneholder feil. Vi må dermed rense dataene før de kan brukes.
                     </p>
                     <p>
-                        TODO
+                        Det blir mye individuelt arbeid, der elevene går fra å løse gitte oppgaver til å lage programmer basert på egne ideer. Vi har også et større samarbeidsprosjekt som demonstrerer systemutvikling i praksis.
                     </p>
                     <p>
-                        TODO
+                        I et gruppeprosjekt på Skaperverkstedet kommer flere sider av faget sammen til en programmerbar gjenstand som elevene designer og produserer.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
                     <img src="../../../assets/imgs/informasjonsteknologi/enda_mer_kode.png" alt="Kode">
-                    <img src="../../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="Folk som samargeider i en sofa">
+                    <img src="../../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="Folk som samarbeider i en sofa">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
