--- a/realfag/programfag/tekforsk/index.html
+++ b/realfag/programfag/tekforsk/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                TODO: Skriv en kort tekst om programfaget Teknologi & Forskningslære her.
+                Teknologi- og forskningslære tar deg med inn i verden av innovasjon, teknologi og vitenskapelig utforskning. Dette faget gir deg et bredt perspektiv på teknologiske prinsipper og forskningsmetoder.
             </p>
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
@@ -45,7 +45,15 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>TODO</li>
+                        <li>
+                            Vi jobber med arbeidstegninger/skisser og utarbeider modeller i skala.
+                            Vi lærer om mikrokontrollere og sensorteknologi (Arduino).
+                            Vi ser på teknologisk utvikling og jobber med etiske  problemstillinger knyttet opp mot teknologi.
+                            Skolen har mye spennende utstyr (3D-printere, laserkutter osv. ) som du får kjennskap til og mestre bruken av etter du er ferdig med faget.
+                        </li>
+                        <li>
+                            I ToF1 har det også vært vanlig praksis å dra på studietur til Trondheim, men vi undersøker nå å isteden starte å dra til Andøya space, og gjennomføre et prosjekt som heter CANSAT der. CANSAT er en årlig internasjonal konkurranse i regi av ESA (European Space Agency). Elevene skal lage innmaten til en satellitt som blir skutt/flydd opp til en høyde litt over 1000 meter.
+                        </li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -57,15 +65,6 @@
                         I Teknologi og forskningslære (ToF) jobber vi prosjektbasert, i grupper eller alene. Liker du å fordype deg i temaer omhandlende teknologi er dette midt i blinken for deg!
                         I ToF vektlegges både teoretisk innsikt, men vel så viktig er det å være praktisk anlagt og ha en god gjennomføringsevne.
                     </p>
-                    <p>
-                        Vi jobber med arbeidstegninger/skisser og utarbeider modeller i skala.
-                        Vi lærer om mikrokontrollere og sensorteknologi (Arduino).
-                        Vi ser på teknologisk utvikling og jobber med etiske  problemstillinger knyttet opp mot teknologi.
-                        Skolen har mye spennende utstyr (3D-printere, laserkutter osv. ) som du får kjennskap til og mestre bruken av etter du er ferdig med faget.
-                    </p>
-                    <p>
-                        I ToF1 har det også vært vanlig praksis å dra på studietur til Trondheim, men vi undersøker nå å isteden starte å dra til Andøya space, og gjennomføre et prosjekt som heter CANSAT der. CANSAT er en årlig internasjonal konkurranse i regi av ESA (European Space Agency). Elevene skal lage innmaten til en satellitt som blir skutt/flydd opp til en høyde litt over 1000 meter.
-                    </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
@@ -73,15 +72,6 @@
                     <img src="../../../assets/imgs/teknologi_og_forskningslære/bro.png" alt="Bro med vekt">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            TODO
-                        </i>
-                    </p>
-                    <p>
-                        - TODO
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -114,7 +104,8 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>TODO</li>
+                        <li>ToF2 bygger videre på innholdet i ToF1. Vi har et større fokus på vitenskapelig metoder, bruk av statistikk og databehandling. Vi skal se på teknologi i et historisk perspektiv og hvordan den har formet samfunnet rundt oss. Vi skal se på etiske problemstillinger knyttet opp mot teknologi.</li>
+                        <li>Her også gjennomfører vi større praktiske prosjekter, men disse vil i større grad være knyttet opp mot elevvalget problemstillinger, på den måten vil ikke alle gjøre de samme tingene slik som i ToF1.</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -123,11 +114,8 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        ToF2 bygger videre på innholdet i ToF1. Vi har et større fokus på vitenskapelig metoder, bruk av statistikk og databehandling. Vi skal se på teknologi i et historisk perspektiv og hvordan den har formet samfunnet rundt oss. Vi skal se på etiske problemstillinger knyttet opp mot teknologi. 
-                    </p>
-                    <p>
-                        Her også gjennomfører vi større praktiske prosjekter, men disse vil i større grad være knyttet opp mot elevvalget problemstillinger, på den måten vil ikke alle gjøre de samme tingene slik som i ToF1.
-
+                        I Teknologi og forskningslære (ToF) jobber vi prosjektbasert, i grupper eller alene. Liker du å fordype deg i temaer omhandlende teknologi er dette midt i blinken for deg!
+                        I ToF vektlegges både teoretisk innsikt, men vel så viktig er det å være praktisk anlagt og ha en god gjennomføringsevne.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
@@ -135,15 +123,6 @@
                     <img src="../../../assets/imgs/teknologi_og_forskningslære/ting.jpg" alt="Teknologi">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
-                    <p>
-                        <i>
-                            TODO
-                        </i>
-                    </p>
-                    <p>
-                        - TODO
-                    </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
@@ -161,7 +140,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <!-- <script src="../../../script/footer.js"></script> -->
+    <script src="../../../script/footer.js"></script>
     <script src="../../../script/global.js"></script>
 </body>
 </html>
