--- a/ssø/programfag/pom/index.html
+++ b/ssø/programfag/pom/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Historie og filosofi tar deg med på en reise gjennom tidene, fra de første menneskene til vår egen samtid. Gjennom diskusjoner, kildearbeid og filosofiske samtaler får du utforske store spørsmål om liv, død, samfunn og vitenskap. Dette faget gir deg verktøy til å tenke kritisk, analysere informasjon og uttrykke deg klart. Det er perfekt for deg som er nysgjerrig på verden og ønsker å utvikle dine analytiske ferdigheter.
+                I faget politikk og menneskerettigheter diskuterer vi aktuelle saker og vi følger med på det som skjer i verden rundt oss. Innholdet strekker seg fra lokaldemokratiet i Norge til internasjonal konflikthåndtering.
             </p>
         </div>
         <!-- bølgete linje -->
@@ -45,18 +45,26 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>OLDTID OG MYTER</b></li>
-                        <li>Handler om de første menneskene og mytene om liv og død.</li>
-                        <li><b>ANTIKKEN OG SAMTALEN</b></li>
-                        <li>Handler om sivilisasjonene rundt Middelhavet</li>
-                        <li><b>MIDDELALDER OG KILDBRUK</b></li>
-                        <li>Handler om hvordan religion og filosofi ble viktig for kulturspredning</li>
-                        <li><b>RENESSANSE OG FORKLARING</b></li>
-                        <li>Handler om hvordan renessansen, boktrykkerkunsten og reformasjonen spredde nye ideer</li>
-                        <li><b>OPP LYSNINGSTIDOG PERSPEKTIVER</b></li>
-                        <li>Handler om vitenskapsrevolusjonen og frihetsidealene fra 1600 tallet</li>
-                        <li><b>NYERE TID OG KRITISK TENKNING</b></li>
-                        <li>Handler om industrisamfunnet og nye ideologier</li>
+                        <li>DEMOKARTI</li>
+                        <ul>
+                            <li>Hva er et demokrati? Hva skal til for at en stat kan kalle seg demokratisk?</li>
+                        </ul>
+                        <li>MENNESKERETTIGHETER</li>
+                        <ul>
+                            <li>Finnes det universelle menneskerettigheter, og hvilken betydning har menneskerettigheter for politikk og for menneskers liv?</li>
+                        </ul>
+                        <li>KONFLIKT</li>
+                        <ul>
+                            <li>Hvorfor oppstår konflikter, og hvordan kan konflikter løses?</li>
+                        </ul>
+                        <li>INTERNASJONALT SAMARBEID</li>
+                        <ul>
+                            <li>Hvordan fungerer internasjonale organisasjoner som FN og EU?</li>
+                        </ul>
+                        <li>DET POLITISKE NORGE</li>
+                        <ul>
+                            <li>Hvordan fungerer de demokratiske institusjonene i Norge?</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
