--- a/ssø/programfag/markedsføring_og_ledelse/index.html
+++ b/ssø/programfag/markedsføring_og_ledelse/index.html
@@ -90,7 +90,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <!-- <script src="../../../script/footer.js"></script> -->
+    <script src="../../../script/footer.js"></script>
     <script src="../../../script/global.js"></script>
 </body>
 </html>
