--- a/realfag/index.html
+++ b/realfag/index.html
@@ -142,7 +142,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Geofag</h3>
                     <p class="fag-beskrivelse">Geofag på Elvebakken tar deg med på en reise gjennom jordens mange lag og prosesser. Her vil du utforske de vitenskapelige prinsippene som ligger til grunn for forståelsen av jorden og dens geologiske, atmosfæriske og hydrologiske systemer.</p>
-                    <p class="fag-sitat"></p>
+                    <p class="fag-sitat">"We learn geology the morning after the earthquake." - Ralph Waldo Emerson</p>
                     <a class ="fag-se-mer-knapp" href="../realfag/programfag/geofag/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/geofag/strand.png" class="fag-bilde">
