--- a/widgets/drag_and_drop_geofag_spill/index.html
+++ b/widgets/drag_and_drop_geofag_spill/index.html
@@ -32,7 +32,7 @@
         <div id="alternativer">
             <div class="alternativ" draggable="true">Sedimentær</div>
             <div class="alternativ" draggable="true">Magmatisk</div>
-            <div class="alternativ" draggable="true">Metamorfisk</div>
+            <div class="alternativ" draggable="true">Metamorf</div>
         </div>
         <!-- sjekk svar - knapp -->
         <div id="sjekk-svar">
