Fikset sentrale temaer sine underoverskrifter

--- a/ssø/programfag/engelsk/index.html
+++ b/ssø/programfag/engelsk/index.html
@@ -45,12 +45,18 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>SAMFUNNSDEBATTER</b></li>
-                        <li>Analysere aktuelle debatter i engelsk-språklige land, f.eks. politiske forhold, rasisme, menneske-rettigheter, helse-problemer, miljø-utfordringer, oppfinnelser, økonomiske forhold etc.</li>
-                        <li><b>SELVVALGT EMNE</b></li>
-                        <li>Utforske minst ett emne innen språk, kultur, samfunn eller vitenskap</li>
-                        <li><b>SKJØNNLITTERATUR</b></li>
-                        <li>Analysere skjønn-litteratur på engelsk</li>
+                        <li>SAMFUNNSDEBATTER</li>
+                        <ul>
+                            <li>Analysere aktuelle debatter i engelsk-språklige land, f.eks. politiske forhold, rasisme, menneske-rettigheter, helse-problemer, miljø-utfordringer, oppfinnelser, økonomiske forhold etc.</li>
+                        </ul>
+                        <li>SELVVALGT EMNE</li>
+                        <ul>
+                            <li>Utforske minst ett emne innen språk, kultur, samfunn eller vitenskap</li>
+                        </ul>
+                        <li>SKJØNNLITTERATUR</li>
+                        <ul>
+                            <li>Analysere skjønn-litteratur på engelsk</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -105,14 +111,22 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>ENGELSKSPRÅKLIGE LANDS INNFLYTELSE I VERDEN</b></li>
-                        <li>Vi drøfter, politikk, menneskerettigheter, miljøutfordringer, oppfinnelser, økonomi, informasjon, kultur, musikk, film, språk, etc</li>
-                        <b>SKJØNNLITTERATUR</b>
-                        <li>Kunst og litteratur oppstår aldri i et vakuum. Vi analyserer skjønnlitteratur på engelsk i lys av historiske og kulturelle sammenhenger.</li>
-                        <li><b>SAMFUNNSMESSIGE OG POLITISKE FORHOLD</b></li>
-                        <li>Analysere og sammenligne to engelskspråklige lands samfunnsmessige og politiske forhold.</li>
-                        <li><b>SELVVALGT EMNE</b></li>
-                        <li>Utforske minst ett emne knyttet til faget.</li>
+                        <li>ENGELSKSPRÅKLIGE LANDS INNFLYTELSE I VERDEN</li>
+                        <ul>
+                            <li>Vi drøfter, politikk, menneskerettigheter, miljøutfordringer, oppfinnelser, økonomi, informasjon, kultur, musikk, film, språk, etc</li>
+                        </ul>
+                        <li>SKJØNNLITTERATUR</li>
+                        <ul>
+                            <li>Kunst og litteratur oppstår aldri i et vakuum. Vi analyserer skjønnlitteratur på engelsk i lys av historiske og kulturelle sammenhenger.</li>
+                        </ul>
+                        <li>SAMFUNNSMESSIGE OG POLITISKE FORHOLD</li>
+                        <ul>
+                            <li>Analysere og sammenligne to engelskspråklige lands samfunnsmessige og politiske forhold.</li>
+                        </ul>
+                        <li>SELVVALGT EMNE</li>
+                        <ul>
+                            <li>Utforske minst ett emne knyttet til faget.</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
