--- a/ssø/programfag/entreprenørskap/index.html
+++ b/ssø/programfag/entreprenørskap/index.html
@@ -44,15 +44,31 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>Minimumsoppgaver for ungdomsbedrift (UB) i skoleåret</b></li>
-                        <li>1 Registrere ungdomsbedrift, <br>2.Finne og registrere mentor,<br> 3.Utforme forretningsplan/modell, <br>4.Presentere for eksterne, <br>5.Føre regnskap, <br>6.Skrive årsrapport/levere revisjonsberetning</li>
-                        <li><b>Starte / prøve og feile / presentere</b></li>
-                        <li>Ideutvikl, Forretningsidé, Jobbroller, Stiftelsesmøte /Registrere</li>
-                        <li><b>Drive / prøve og feile / presentere</b></li>
-                        <li>HR og ledelse, Økonomi, Forretningsmodell / canvas / plan, Mentor og nettverk, Bærekraft, Produktet, Produksjon, Markedsføring, Profilering og salg, Mesterskap</li>
-                        <li><b>Avslutte / videreføre / restarte / nystarte</b></li>
-                        <li>Årsrapport, Revisjon, Generalforsamling, Avvikle, Attest, CV</li>
-                        <li><b>Repetisjon og teori gjennomgang</b> slutten av skoleåret</li>
+                        <li>Minimumsoppgaver for ungdomsbedrift (UB) i skoleåret</li>
+                        <ul>
+                            <li>Registrere ungdomsbedrift </li>
+                            <li>Finne og registrere mentor</li>
+                            <li>Utforme forretningsplan/modell</li>
+                            <li>Presentere for eksterne</li>
+                            <li>Føre regnskap</li>
+                            <li>Skrive årsrapport/levere revisjonsberetning</li>
+                        </ul>
+                        <li>Starte / prøve og feile / presentere</li>
+                        <ul>
+                            <li>Ideutvikl, Forretningsidé, Jobbroller, Stiftelsesmøte /Registrere</li>
+                        </ul>
+                        <li>Drive / prøve og feile / presentere</li>
+                        <ul>
+                            <li>HR og ledelse, Økonomi, Forretningsmodell / canvas / plan, Mentor og nettverk, Bærekraft, Produktet, Produksjon, Markedsføring, Profilering og salg, Mesterskap</li>
+                        </ul>
+                        <li>Avslutte / videreføre / restarte / nystarte</li>
+                        <ul>
+                            <li>Årsrapport, Revisjon, Generalforsamling, Avvikle, Attest, CV</li>
+                        </ul>
+                        <li>Repetisjon og teori gjennomgang</li>
+                        <ul>
+                            <li>Slutten av skoleåret</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
