--- a/ssø/programfag/hifi/index.html
+++ b/ssø/programfag/hifi/index.html
@@ -39,18 +39,30 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>OLDTID OG MYTER</b></li>
-                        <li>Handler om de første menneskene og mytene om liv og død.</li>
-                        <li><b>ANTIKKEN OG SAMTALEN</b></li>
-                        <li>Handler om sivilisasjonene rundt Middelhavet</li>
-                        <li><b>MIDDELALDER OG KILDBRUK</b></li>
-                        <li>Handler om hvordan religion og filosofi ble viktig for kulturspredning</li>
-                        <li><b>RENESSANSE OG FORKLARING</b></li>
-                        <li>Handler om hvordan renessansen, boktrykkerkunsten og reformasjonen spredde nye ideer</li>
-                        <li><b>OPP LYSNINGSTIDOG PERSPEKTIVER</b></li>
-                        <li>Handler om vitenskapsrevolusjonen og frihetsidealene fra 1600 tallet</li>
-                        <li><b>NYERE TID OG KRITISK TENKNING</b></li>
-                        <li>Handler om industrisamfunnet og nye ideologier</li>
+                        <li>OLDTID OG MYTER</li>
+                        <ul>
+                            <li>Handler om de første menneskene og mytene om liv og død.</li>
+                        </ul>
+                        <li>ANTIKKEN OG SAMTALEN</li>
+                        <ul>
+                            <li>Handler om sivilisasjonene rundt Middelhavet</li>
+                        </ul>
+                        <li>MIDDELALDER OG KILDBRUK</li>
+                        <ul>
+                            <li>Handler om hvordan religion og filosofi ble viktig for kulturspredning</li>
+                        </ul>
+                        <li>RENESSANSE OG FORKLARING</li>
+                        <ul>
+                            <li>Handler om hvordan renessansen, boktrykkerkunsten og reformasjonen spredde nye ideer</li>
+                        </ul>
+                        <li>OPP LYSNINGSTIDOG PERSPEKTIVER</li>
+                        <ul>
+                            <li>Handler om vitenskapsrevolusjonen og frihetsidealene fra 1600 tallet</li>
+                        </ul>
+                        <li>NYERE TID OG KRITISK TENKNING</li>
+                        <ul>
+                            <li>Handler om industrisamfunnet og nye ideologier</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
