--- a/ssø/programfag/kinesisk2/index.html
+++ b/ssø/programfag/kinesisk2/index.html
@@ -40,14 +40,20 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>SPRÅKET:</b></li>
-                        <li>Hvordan føre en god samtale med en kineser?</li>
-                        <li>Hvordan kunne forstå og skrive en passende tekst innen et gitt emne?</li>
-                        <li><b>KULTUREN:</b></li>
-                        <li>Hvordan får det moderne Kina inspirasjon fra den flere tusen år gamle kulturen?</li>
-                        <li>Hva med mat? Hva med ritualer? Hva med filosofi?</li>
-                        <li><b>SAMFUNNET:</b></li>
-                        <li>Hva slags muligheter og utfordringer byr det kinesiske samfunnet på?</li>
+                        <li>SPRÅKET</li>
+                        <ul>
+                            <li>Hvordan føre en god samtale med en kineser?</li>
+                            <li>Hvordan kunne forstå og skrive en passende tekst innen et gitt emne?</li>
+                        </ul>
+                        <li>KULTUREN</li>
+                        <ul>
+                            <li>Hvordan får det moderne Kina inspirasjon fra den flere tusen år gamle kulturen?</li>
+                            <li>Hva med mat? Hva med ritualer? Hva med filosofi?</li>
+                        </ul>
+                        <li>SAMFUNNET</li>
+                        <ul>
+                            <li>Hva slags muligheter og utfordringer byr det kinesiske samfunnet på?</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -59,7 +65,7 @@
                         Programfaget legger vekt på praktisk bruk av dagligtale i kinesisk Diskusjon og selvstendig arbeid er viktig. Elevene lærer å produsere kreativt innhold ved hjelp av forskjellige verktøy. Opplæringen inkluderer et studieprogram ved et prestisjetungt kinesisk universitet
                     </p>
                     <p>
-                        *V ed u niversitetet får elevene et to ukers skreddersydd program med både språk og kultur . Elevene kan komme opp i skriftlig og muntlig eksamen. Det gir ½ fordypningspoeng ved opptak til høyere utdanning. Har du spørsmål om faget? Vennligst ta kontakt med faglærer: sofie.gjerull osloskolen .no
+                        *Ved universitetet får elevene et to ukers skreddersydd program med både språk og kultur . Elevene kan komme opp i skriftlig og muntlig eksamen. Det gir ½ fordypningspoeng ved opptak til høyere utdanning. Har du spørsmål om faget? Vennligst ta kontakt med faglærer: sofie.gjerull osloskolen .no
                     </p>
                     <p>
                         *Skolen har hatt samarbeid med Universitetet i Nanjing i over 10 år. Prosjektet tar forbehold om reiserestriksjoner.
