--- a/ssø/programfag/språk3/index.html
+++ b/ssø/programfag/språk3/index.html
@@ -40,14 +40,22 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>SPRÅK</b></li>
-                        <li>Du lærer å bruke språket både skriftlig og muntlig. Vi bygger på det du har lært og legger mye vekt på kommunikasjon.</li>
-                        <li><b>KULTUR</b></li>
-                        <li>Du lærer å snakke og skrive om landets kultur. Og du lærer å lese autentiske tekster.</li>
-                        <li><b>EKSTRA STUDIEPOENG</b></li>
-                        <li>Programfag III i fremmedspråk gir deg ekstra studiepoeng</li>
-                        <li><b>STUDIETUR</b></li>
-                        <li>På vårparten tilbyr skolen en ukes studietur til en språkskole til målspråkslandet</li>
+                        <li>SPRÅK</li>
+                        <ul>
+                            <li>Du lærer å bruke språket både skriftlig og muntlig. Vi bygger på det du har lært og legger mye vekt på kommunikasjon.</li>
+                        </ul>
+                        <li>KULTUR</li>
+                        <ul>
+                            <li>Du lærer å snakke og skrive om landets kultur. Og du lærer å lese autentiske tekster.</li>
+                        </ul>
+                        <li>EKSTRA STUDIEPOENG</li>
+                        <ul>
+                            <li>Programfag III i fremmedspråk gir deg ekstra studiepoeng</li>
+                        </ul>
+                        <li>STUDIETUR</li>
+                        <ul>
+                            <li>På vårparten tilbyr skolen en ukes studietur til en språkskole til målspråkslandet</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="visuelt-element">
