Fjerning av VFX

--- a/mk/index.html
+++ b/mk/index.html
@@ -44,7 +44,7 @@
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../mk/programfag/bilde/" class="fag_i_meny">
                     <img src="../assets/imgs/bilde/linse.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Bilde (film, foto og VFX)</p>
+                    <p>Bilde (film og foto)</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/grafisk_design/" class="fag_i_meny">
@@ -79,7 +79,7 @@
             <div class="fag-element">
                 <img src="../assets/imgs/bilde/bilde2.jpg" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Bilde (film, foto og VFX)</h3>
+                    <h3 class="fag-tittel">Bilde (film og foto)</h3>
                     <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
                     <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/bilde/">Se mer →</a>
