--- a/mk/programfag/bilde/index.html
+++ b/mk/programfag/bilde/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./bilde.css">
     <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
-    <title>Bilde: film, foto og VFX</title>
+    <title>Bilde: film og foto</title>
 </head>
 <body>
     <header>
         <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
         <div id="forside-bilde">
-            <h1>Bilde: film, foto og VFX</h1>
+            <h1>Bilde: film og foto</h1>
             <!-- knapp tilbake til X -->
             <a href="../../../mk/" id="tilbake-knapp">&lt; Tilbake til MK</a>
         </div>
@@ -30,14 +30,14 @@
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
-            <h2>Bilde: film, foto og VFX</h2>
+            <h2>Bilde: film og foto</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
                     <li>Eksamensform: <b>Praktisk</b></li>
                     <li>Standpunktkarakter: <b>1</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
-                    <li>OBS: <b>Foto, film og VFX er tre forskjellige fag.</b></li>
+                    <li>OBS: <b>Foto og film er to forskjellige fag.</b></li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Dette lærer du</h3>
@@ -80,7 +80,7 @@
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
                     <img src="../../../assets/imgs/bilde/bilde1.jpg" alt="Folk som tar bilder.">
-                    <img src="../../../assets/imgs/bilde/bilde3.jpg" alt="Person tom konsentrert tar bilde.">
+                    <img src="../../../assets/imgs/bilde/bilde3.jpg" alt="Person som konsentrert tar bilde.">
                 </div>
                 <div class="elev-sitat">
                 </div>
