--- a/ssø/programfag/entreprenørskap/index.html
+++ b/ssø/programfag/entreprenørskap/index.html
@@ -25,11 +25,6 @@
                 Entreprenørskap faget handler om å starte egen bedrift. Du lærer teori og får praktisk erfaring gjennom å utvikle en egen forretningsidé. Gjennom ungdomsbedrift får du en innføring i økonomi, markedsføring og ledelse. Du vil lære å jobbe selvstendig og samarbeide med andre. Målet er å utvikle din entreprenørskapsevne og skape noe nytt.
             </p>
         </div>
-        <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
-        <div id="fagnummer-knapper">
-            <a href="#fagnummer1" id = "første-fag">Entreprenørskap 1</a>
-            <a href="#fagnummer2" id = "andre-fag">Entreprenørskap 2</a>
-        </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
@@ -82,8 +77,7 @@
                         prøve, feile og avslutte egne ungdomsbedrifter ved å sette idéer ut i handling.
                         Bedrifter kan både tjene penger selv, vinne stipender og få oppstartsstøtte.
                         Vi starter med innovasjonscamp for å hurtig avklare behov/problem/løsninger, fortsetter med learning pit prosjektbasert læring og utforsker/kritiserer/driver.
-                        Vi jobber tett med Ungt Entreprenørskap og ungdomsbedrift
-konkurranser.
+                        Vi jobber tett med Ungt Entreprenørskap og ungdomsbedriftskonkurranser.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
@@ -109,50 +103,6 @@ konkurranser.
                     <li><a href="https://snl.no/entrepren%C3%B8r_-_innovasjon" target="_blank">SNL</a></li>
                     <li><a href="https://www.udir.no/lk20/ent01-03/" target="_blank">Læreplan</a></li>
                 </div>
-                <div class="divider-element"></div>
-            </div>
-        </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje"></div>
-        <!-- informasjon om [programfag] 2 -->
-        <div id="fagnummer2" class="fag-informasjon">
-            <h2>Entreprenørskap 2</h2>
-            <div class="informasjonsbokser">
-                <div class="rask-oversikt">
-                    <h3>Rask oversikt</h3>
-                    <li>Eksamensform: <b>Skriftlig eller muntlig.</b></li>
-                    <li>Bygger på andre fag: <b>Nei</b></li>
-                </div>
-                <div class="sentrale-temaer">
-                    <h3>Sentrale temaer</h3>
-                    <ul>
-                        <li>CASE Entreprenørskap 0år og Virksomhetsutvikling/vekst 3+år</li>
-                        <li>CASE Innovasjon, Internasjonalisering, Org.utvikling og ledelse</li>
-                        <li>CASE Omstillingsevne, Støtteordninger for vekst og utvikling</li>
-                        <li>REPETISJON OG TEORI GJENNOMGANG slutten av skoleåret</li>
-                    </ul>
-                </div>
-                <div class="visuelt-element">
-
-                </div>
-                <div class="hvordan-jobber-vi">
-                    <h3>Hvordan jobber vi?</h3>
-                    <p>
-                        Entreprenørskap faget er helt og fullt praktisk. Vi jobber som grupper med å starte, drive, prøve, feile og avslutte egne ungdomsbedrifter ved å sette idéer ut i handling. Bedrifter kan både tjene penger selv, vinne stipender og få oppstartsstøtte. Vi starter med innovasjonscamp for å hurtig avklare behov/problem/løsninger, fortsetter med learning pit prosjektbasert læring og utforsker/kritiserer/driver. Vi jobber tett med Ungt Entreprenørskap og ungdomsbedrift konkurranser.
-                    </p>
-                </div>
-                <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/entreprenørskap/forretningsmodell.png" alt="Entreprenørskap forettningsmodell.">
-                    <img src="../../../assets/imgs/entreprenørskap/ue.png" alt="Ungt entreprenørskap">
-                </div>
-                <div class="elev-sitat">
-                </div>
-                <div class="mer-informasjon">
-                    <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/entrepren%C3%B8r_-_innovasjon" target="_blank">SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/ent01-03/" target="_blank">Læreplan</a></li>
-                </div>
-                <div class="divider-element"></div>
             </div>
         </div>
         <!-- bølgete linje -->
