Småendringer tekst SSØ

--- a/ssø/programfag/engelsk/index.html
+++ b/ssø/programfag/engelsk/index.html
@@ -47,7 +47,7 @@
                     <ul>
                         <li>SAMFUNNSDEBATTER</li>
                         <ul>
-                            <li>Analysere aktuelle debatter i engelsk-språklige land, f.eks. politiske forhold, rasisme, menneske-rettigheter, helse-problemer, miljø-utfordringer, oppfinnelser, økonomiske forhold etc.</li>
+                            <li>Analysere aktuelle debatter i engelsk-språklige land, f.eks. politiske forhold, rasisme, menneskerettigheter, helseproblemer, miljøutfordringer, oppfinnelser, økonomiske forhold etc.</li>
                         </ul>
                         <li>SELVVALGT EMNE</li>
                         <ul>
@@ -55,7 +55,7 @@
                         </ul>
                         <li>SKJØNNLITTERATUR</li>
                         <ul>
-                            <li>Analysere skjønn-litteratur på engelsk</li>
+                            <li>Analysere skjønnlitteratur på engelsk</li>
                         </ul>
                     </ul>
                 </div>
@@ -65,7 +65,7 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        I faget Engelsk 1 leser vi tekster og ser på filmer der vi diskuterer inn-holdet i grupper. Det er foreles-ninger, og vi får veiledning i studie-teknikk og hvordan skrive akademiske tekster. Vi har mye samarbeid med medelever, men også individuelt fordypningsarbeid.
+                        I faget Engelsk 1 leser vi tekster og ser på filmer der vi diskuterer innholdet i grupper. Det er forelesninger, og vi får veiledning i studieteknikk og hvordan skrive akademiske tekster. Vi har mye samarbeid med medelever, men også individuelt fordypningsarbeid.
 Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en muntlig, og eventuelt en skriftlig, presentasjon av det selvvalgte emnet, samt en heldagsprøve i halvåret, men dette kan klassen diskutere med læreren.
                     </p>
                 </div>
