--- a/ssø/programfag/kinesisk2/index.html
+++ b/ssø/programfag/kinesisk2/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Kinesisk 2 gir deg en unik mulighet til å dykke ned i det kinesiske språk og kultur. Gjennom praktiske øvelser, diskusjoner og et spennende universitetsopphold i Kina, utvikler du dine språkferdigheter og får en dypere forståelse for landet.
+                Gjennom praktiske øvelser, diskusjoner, utvikler du dine språkferdigheter og får en dypere forståelse for landet.
             </p>
         </div>
         <!-- bølgete linje -->
