--- a/ssø/programfag/språk3/index.html
+++ b/ssø/programfag/språk3/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                I språk 3 lærer du både å kommunisere bedre på språket ditt, i tillegg til at du lærer om kulturen, får dra på en språkreise til en språkskole i morsmålslandet <em>og</em> får et halvt studiepoeng!
+                I språk 3 lærere du å kommunisere bedre i språket, samt du får fordype deg mer i kulturen til land der språket er utbredt.
             </p>
         </div>
         <!-- bølgete linje -->
