Ferdigstilling fjerning av VFX

--- a/mk/programfag/bilde/index.html
+++ b/mk/programfag/bilde/index.html
@@ -37,7 +37,7 @@
                     <li>Eksamensform: <b>Praktisk</b></li>
                     <li>Standpunktkarakter: <b>1</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
-                    <li>OBS: <b>Foto og film er to forskjellige fag.</b></li>
+                    <li>Faggruppene deles inn i elevenes interesse for film eller foto så langt det er mulig.</li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Dette lærer du</h3>
@@ -54,15 +54,9 @@
                 <div class="dette-gjør-vi">
                     <h3>Dette gjør vi</h3>
                     <ul>
-                        <li>Utvikler ideer og planlegger</li>
-                        <li>Gjøre opptak av foto og/eller film</li>
-                        <li>Utfører postproduksjon</li>
-                        <li>Jobber med ulike sjangere</li>
-                        <li>Ser og analyserer foto og film</li>
-                        <li>Drar på utsillinger, kino og foredrag</li>
-                        <li>Sender arbeider til festivaler og utstillinger</li>
-                        <li>Møter profesjonelle i bransjen</li>
-                        <li>Samarbeider med eksterne oppdragsgivere</li>
+                        <li>Samarbeider med blandt annet Aftenposten og NRK</li>
+                        <li>Lager podkast</li>
+                        <li>Publiserer innhold til skolens nettmagasin</li>
                     </ul>
                 </div>
                 <div class="nyttig-fordi">
