--- a/realfag/programfag/fysikk/index.html
+++ b/realfag/programfag/fysikk/index.html
@@ -40,7 +40,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: 0.5</li>
+                    <li>Realfagspoeng: 0.5 (0.25 for Vg 1)</li>
                     <li>Eksamensform: Muntlig-praktisk</li>
                     <li>Bygger på andre fag: Nei</li>
                 </div>
@@ -110,7 +110,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: 1</li>
+                    <li>Realfagspoeng: 1 (0.5 for Vg 1)</li>
                     <li>Eksamensform: Skriftlig og muntlig-praktisk</li>
                     <li>Bygger på andre fag: Ja, Fysikk 1</li>
                 </div>
