--- a/realfag/programfag/tekforsk/index.html
+++ b/realfag/programfag/tekforsk/index.html
@@ -38,7 +38,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Muntlig-praktisk</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
@@ -97,7 +97,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Skriftlig eller muntlig-praktisk.</b></li>
                     <li>Bygger på andre fag: <b>Ja ToF 1, men ikke krav.</b></li>
                 </div>
