--- a/ssø/programfag/kinesisk2/index.html
+++ b/ssø/programfag/kinesisk2/index.html
@@ -33,7 +33,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Språkpoeng: <b>0.5</b></li>
+                    <li>Språkpoeng: <b>1 (for Vg 1 ingen poeng)</b></li>
                     <li>Eksamensform: <b>Muntlig eller skriftlig</b></li>
                     <li>Bygger på andre fag: <b>Ja, Kinesisk 1</b></li>
                 </div>
