--- a/ssø/programfag/språk3/index.html
+++ b/ssø/programfag/språk3/index.html
@@ -33,7 +33,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Studiepoeng: <b>0.5</b></li>
+                    <li>Studiepoeng: <b>1 (for Vg 1 ingen poeng)</b></li>
                     <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
                     <li>Bygger på andre fag: <b>Ja, språk 2</b></li>
                 </div>
