--- a/realfag/programfag/geofag/index.html
+++ b/realfag/programfag/geofag/index.html
@@ -40,7 +40,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Muntlig-praktisk</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
@@ -92,7 +92,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
