--- a/realfag/programfag/informasjonsteknologi/index.html
+++ b/realfag/programfag/informasjonsteknologi/index.html
@@ -38,7 +38,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Muntlig-praktisk</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
@@ -116,7 +116,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Skriftlig eller muntlig-praktisk.</b></li>
                     <li>Bygger på andre fag: <b>Ja, IT1. Men det er mulig å ta IT2 uten å ta IT1 først om du kan programmering fra før.</b></li>
                 </div>
