--- a/realfag/programfag/r_matte/index.html
+++ b/realfag/programfag/r_matte/index.html
@@ -47,7 +47,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
+                    <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Muntlig-praktisk</b></li>
                     <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
                 </div>
@@ -134,7 +134,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>1</b></li>
+                    <li>Realfagspoeng: <b>1 (0.5 for Vg 1)</b></li>
                     <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
                     <li>Bygger på andre fag: <b>Ja, Matematikk-R1</b></li>
                 </div>
